# tagfiles

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
tagfiles/: __init__.py  _common.py  base.py  errors.py  id3.py  mp4.py  vorbis.py
tests/: test_common.py  test_tagfiles.py
tests/fakelib/: tag_script.py
tests/fakelib/New Album/: track2.m4a
