[tool.poetry]
name = "tagfiles"
version = "0.1.5"
description = "A tagging interface for multiple audio formats and metadata containers."
authors = ["azuline <azuline@riseup.net>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/azuline/tagfiles"
packages = [
    { include = "tagfiles" }
]

[tool.poetry.dependencies]
python = "^3.7"
mutagen = "^1.42"

[tool.poetry.dev-dependencies]
coveralls = "^1.8"
flake8 = "^3.7"
isort = "^4.3"
pytest = "^5.0"
pytest-cov = "^2.7"
yapf = "^0.27.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
