[tool.poetry]
name = "tagfiles"
version = "0.3.3"
description = "A tagging interface for multiple audio formats and metadata containers."
authors = ["azuline <azuline@riseup.net>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/azuline/tagfiles"
packages = [
    { include = "tagfiles" }
]

[tool.poetry.dependencies]
python = "^3.6"
mutagen = "^1.42"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.0"
pytest-cov = "^2.7"
tox = "^3.14"
black = "^20.8b1"
isort = "^5.6.4"

[tool.black]
line-length = 79
target-version = ['py37']
skip-string-normalization = 1

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
